add IECON2024 conference paper

--- a/index.html
+++ b/index.html
@@ -2234,27 +2234,30 @@
                                     <div class="certificate-cards">
                                         <!-- Blog Item -->
                                         <div class="col-lg-4 col-md-6 col-item-certificate">
-                                            <a href="https://www.iecon-2024.org/" target="_blank" class="card-link">
-                                                <div class="card-p20 border-0 wow fadeInUp">
-                                                    <div class="img animate-scale">
+                                            <div class="card-p20 border-0 wow fadeInUp">
+                                                <div class="img animate-scale">
+                                                    <a href="https://www.iecon-2024.org/" target="_blank">
                                                         <img
                                                             class="img-fluid w-100"
                                                             src="assets/images/achievement/IEEE_2024.jpg"
                                                             alt="blog"/>
-                                                    </div>
-                                                    <div class="card-body px-0 pb-0">
-                                                        <ul class="top-meta d-flex flex-wrap">
-
-                                                            <li class="date">
-                                                                <i class="fas fa-calendar-alt me-2"></i>3-6 Nov, 2024
-                                                            </li>
-
-                                                        </ul>
-                                                        <h5 class="card-title">Pixel perfect design and clear code delivered to you</h5>
-                                                    </div>
+                                                    </a>
                                                 </div>
-                                            </a>
+                                                <div class="card-body px-0 pb-0">
+                                                    <ul class="top-meta d-flex flex-wrap">
+                                                        <li class="date">
+                                                            <i class="fas fa-calendar-alt me-2"></i>3-6 Nov, 2024
+                                                        </li>
+                                                    </ul>
+                                                    <h5 class="card-title">
+                                                        <a href="https://ieeexplore.ieee.org/document/9968875" target="_blank">
+                                                            Deep Learning Based Corona Discharge Severity Classification for High Voltage Equipment
+                                                        </a>
+                                                    </h5>
+                                                </div>
+                                            </div>
                                         </div>
+
                                         <!-- End Blog Item -->
                                         <!-- Blog Item -->
                                         <div class="col-lg-4 col-md-6 col-item-certificate">
