add IECON2022 conference paper

--- a/index.html
+++ b/index.html
@@ -2261,30 +2261,28 @@
                                         <!-- End Blog Item -->
                                         <!-- Blog Item -->
                                         <div class="col-lg-4 col-md-6 col-item-certificate">
-                                            <a
-                                                href="https://ieeexplore.ieee.org/document/9968875"
-                                                target="_blank"
-                                                class="card-link">
-                                                <div class="card-p20 border-0 wow fadeInUp">
-                                                    <div class="img animate-scale">
+                                            <div class="card-p20 border-0 wow fadeInUp">
+                                                <div class="img animate-scale">
+                                                    <a href="https://iten.ieee-ies.org/featured-news/2022/a-successful-edition-of-iecon-2022-in-brussels/" target="_blank">
                                                         <img
                                                             class="img-fluid w-100"
                                                             src="assets/images/achievement/IEEE_2022.jpg"
                                                             alt="blog"/>
-                                                    </div>
-                                                    <div class="card-body px-0 pb-0">
-                                                        <ul class="top-meta d-flex flex-wrap">
-
-                                                            <li class="date">
-                                                                <i class="fas fa-calendar-alt me-2"></i>18-21 Oct. 2022
-                                                            </li>
-
-                                                        </ul>
-                                                        <h5 class="card-title">Classification of Mechanical Faults in Rotating Machines
-                                                        </h5>
-                                                    </div>
+                                                    </a>
                                                 </div>
-                                            </a>
+                                                <div class="card-body px-0 pb-0">
+                                                    <ul class="top-meta d-flex flex-wrap">
+                                                        <li class="date">
+                                                            <i class="fas fa-calendar-alt me-2"></i>3-6 Nov, 2024
+                                                        </li>
+                                                    </ul>
+                                                    <h5 class="card-title">
+                                                        <a href="https://ieeexplore.ieee.org/document/9968875" target="_blank">
+                                                            Classification of Mechanical Faults in Rotating Machines Using SMOTE Method and Deep Neural Networks
+                                                        </a>
+                                                    </h5>
+                                                </div>
+                                            </div>
                                         </div>
                                         <!-- End Blog Item -->
 
