--- a/index.html
+++ b/index.html
@@ -2617,7 +2617,7 @@
                                                 </div>
                                                 <div class="info-content">
                                                     <h5>My Location:</h5>
-                                                    <p>Germany ,Bremen
+                                                    <p>Bremen, Germany
                                                     </p>
                                                 </div>
                                             </div>
