--- a/index.html
+++ b/index.html
@@ -2246,7 +2246,7 @@
                                                 <div class="card-body px-0 pb-0">
                                                     <ul class="top-meta d-flex flex-wrap">
                                                         <li class="date">
-                                                            <i class="fas fa-calendar-alt me-2"></i>3-6 Nov, 2024
+                                                            <i class="fas fa-calendar-alt me-2"></i>3-6 Nov, 2024 , Chicaco, USA
                                                         </li>
                                                     </ul>
                                                     <h5 class="card-title">
@@ -2273,7 +2273,7 @@
                                                 <div class="card-body px-0 pb-0">
                                                     <ul class="top-meta d-flex flex-wrap">
                                                         <li class="date">
-                                                            <i class="fas fa-calendar-alt me-2"></i>3-6 Nov, 2024
+                                                            <i class="fas fa-calendar-alt me-2"></i>18 - 21 Oct, 2022 , Brussles, Belguim
                                                         </li>
                                                     </ul>
                                                     <h5 class="card-title">
