--- a/index.html
+++ b/index.html
@@ -2497,7 +2497,7 @@
                                                         </div>
                                                         <div class="reviewr">
                                                             <div class="img">
-                                                                <img class="img-fluid" src="assets/images/testimonial/MSM.jpg" alt="testimonial"/>
+                                                                <img class="img-fluid" src="assets/images/testimonial/MSM.jpeg" alt="testimonial"/>
                                                             </div>
                                                             <div class="content align-self-center">
                                                                 <h4 class="name">
@@ -2523,7 +2523,7 @@
                                                         </div>
                                                         <div class="reviewr">
                                                             <div class="img">
-                                                                <img class="img-fluid" src="assets/images/testimonial/YB.jpg" alt="testimonial"/>
+                                                                <img class="img-fluid" src="assets/images/testimonial/YB.jpeg" alt="testimonial"/>
                                                             </div>
                                                             <div class="content align-self-center">
                                                                 <h4 class="name">Yassine Baccari</h4>
@@ -2549,7 +2549,7 @@
                                                         </div>
                                                         <div class="reviewr">
                                                             <div class="img">
-                                                                <img class="img-fluid" src="assets/images/testimonial/AF.jpg" alt="testimonial"/>
+                                                                <img class="img-fluid" src="assets/images/testimonial/AF.jpeg" alt="testimonial"/>
                                                             </div>
                                                             <div class="content align-self-center">
                                                                 <h4 class="name">Anis Fakhfakh</h4>
@@ -2565,12 +2565,15 @@
                                                     <div class="testimonial-review card-p30">
 
                                                         <div class="content">
-                                                            <p>Case studies are an excellent opportunity for your customers to dive deeper
-                                                                into product success stories.</p>
+                                                            <p>I had the pleasure of working with Maher on several projects during our studies, and I was always impressed 
+                                                                by his talent and skills. He knows how to turn an idea into a working solution with a strategic approach and a 
+                                                                deep understanding of the challenges. Even though our studies ended more than three years ago, we’re still in touch, 
+                                                                and I often reach out to him when I need help. He’s not only a skilled professional but also a great person and 
+                                                                a reliable team member. Working with him has always been a privilege!</p>
                                                         </div>
                                                         <div class="reviewr">
                                                             <div class="img">
-                                                                <img class="img-fluid" src="assets/images/testimonial/MB.jpg" alt="testimonial"/>
+                                                                <img class="img-fluid" src="assets/images/testimonial/MB.jpeg" alt="testimonial"/>
                                                             </div>
                                                             <div class="content align-self-center">
                                                                 <h4 class="name">Mariem Baratli</h4>
