--- a/index.html
+++ b/index.html
@@ -2497,7 +2497,7 @@
                                                         </div>
                                                         <div class="reviewr">
                                                             <div class="img">
-                                                                <img class="img-fluid" src="assets/images/testimonial/MSM.jpeg" alt="testimonial"/>
+                                                                <img class="img-fluid" src="assets/images/testimonial/MSM.jpg" alt="testimonial"/>
                                                             </div>
                                                             <div class="content align-self-center">
                                                                 <h4 class="name">
@@ -2523,7 +2523,7 @@
                                                         </div>
                                                         <div class="reviewr">
                                                             <div class="img">
-                                                                <img class="img-fluid" src="assets/images/testimonial/YB.jpeg" alt="testimonial"/>
+                                                                <img class="img-fluid" src="assets/images/testimonial/YB.jpg" alt="testimonial"/>
                                                             </div>
                                                             <div class="content align-self-center">
                                                                 <h4 class="name">Yassine Baccari</h4>
@@ -2549,7 +2549,7 @@
                                                         </div>
                                                         <div class="reviewr">
                                                             <div class="img">
-                                                                <img class="img-fluid" src="assets/images/testimonial/AF.jpeg" alt="testimonial"/>
+                                                                <img class="img-fluid" src="assets/images/testimonial/AF.jpg" alt="testimonial"/>
                                                             </div>
                                                             <div class="content align-self-center">
                                                                 <h4 class="name">Anis Fakhfakh</h4>
@@ -2573,11 +2573,11 @@
                                                         </div>
                                                         <div class="reviewr">
                                                             <div class="img">
-                                                                <img class="img-fluid" src="assets/images/testimonial/MB.jpeg" alt="testimonial"/>
+                                                                <img class="img-fluid" src="assets/images/testimonial/MB.jpg" alt="testimonial"/>
                                                             </div>
                                                             <div class="content align-self-center">
                                                                 <h4 class="name">Mariem Baratli</h4>
-                                                                <p>CEO at XYZ</p>
+                                                                <p>DevOps Engineer at ATACAMA Blooms Gmbh</p>
                                                             </div>
                                                         </div>
                                                     </div>
